[B]Version 1.7.7[/B]

- Updated: keez
- Fixed: catcher
- Fixed: video listing


[B]Version 1.7.6[/B]

- Updated: fucktube
- Fixed: catcher


[B]Version 1.7.5[/B]

- Updated: extremetube
- Fixed: video listing
- Fixed: catcher


[B]Version 1.7.4[/B]

- Updated: xhamster
- Fixed: next button


[B]Version 1.7.3[/B]

- Updated: xhamster
- Fixed: catcher
- Fixed: video regex


[B]Version 1.7.2[/B]

- Updated: pornotube (catcher still broken)
- Fixed: search


[B]Version 1.7.1[/B]

- Added: madthumbs and pornoxo
- Added: readded shufuni and girlfriendvideos
- Updated: xhamster, redtube and youporn (categories)
- Updated: search (keep last search string in memory)
- Updated: striptoslash command


[B]Version 1.7.0[/B]

- Fixed: encoding problems for atv users (thx tiben20 and cipher_)
- Fixed: download problem
- Removed: girlfriendvideos
- Updated: youjizz, boysfood


[B]Version 1.6.9[/B]

- Updated: xhamster
- Added: youjizz


[B]Version 1.6.8[/B]

- Updated: tube8, moviesand, keezmovies
- Added: girlfriendvideos and eporner (thx tiben20)
- Added: readded mofosex


[B]Version 1.6.7[/B]

- Updated: cookies are saved to the userdata profile path now
- Added: description in addon.xml
- Added: disclaimer in addon.xml
- Added: enable debug logging option in plugin settings
- Added: action=decode (catcher)


[B]Version 1.6.6[/B]

- Updated: youporn
- Added: ext_action=decode (catcher)


[B]Version 1.6.5[/B]

- Added: StileProject (thx tiben20)
- Updated: extremetube, boysfood
- Removed: mofosex


[B]Version 1.6.4[/B]

- Replaced: os.getcwd() with addon.getAddonInfo('path')
- Replaced: full setting path with addon.getAddonInfo('profile')


[B]Version 1.6.3[/B]

- Updated: pornhub, mofosex, extremetube
- Added: moviesand, xhamster (re-added)
- Updated: xhamster icon
- Added: license.txt and changelog.txt