@@ -6,8 +6,8 @@ catcher=mofosex.com
 ########################################################
 # Videos
 ########################################################
-item_infos=</a></div><a href="(/videos/[^"]+html)" target="[^"]+"><img class="[^"]+" src="(http[^"]+media/thumbs/[^"]+jpg)" alt="([^"]+)".+?<div class="[^"]+">([^"]+)</div>
-item_order=url|icon|title|title.append
+item_infos=href="(/videos/[^"]+)"[^<]+<img id="[^"]+" class="[^"]+" alt="[^"]+" title="([^"]+)".+?src="([^"]+)" [^<]+</a>[^<]+<div id="durationVideo[^"]+" class="[^"]+">(\d+:\d+)</div>
+item_order=url|title|icon|title.append
 item_info_name=title.append
 item_info_build= (%s)
 item_info_name=type
@@ -16,7 +16,7 @@ item_url_build=http://www.mofosex.com%s
 ########################################################
 # Categories
 ########################################################
-item_infos=<a class="[^"]+" href="([^"]+)" title="([^"]+)">More[^"]+videos</a>
+item_infos=<h1 class="title-box float-left"><a href="([^"]+)">([^<]+)</a></h1>
 item_order=url|title
 item_skill=directory
 item_info_name=title
